Create video view model

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.Droopy"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".video.VideoActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Droopy">
@@ -21,11 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".VideoActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Droopy"
-        />
+
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
