--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,11 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.6.0")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.5.0")
+    implementation "io.coil-kt:coil-compose:2.3.0" // image loader para compose
+    implementation 'com.squareup.picasso:picasso:2.71828' // image loader para views
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
